
- Cached token marker state was not properly cleared when switching
  modes due to a regression from pre10.

- MacOS plugin 2.0.4 fixes a few bugs when opening files from the
  Finder.

- Minor fix for XML syntax highlighting.

- Fixed "Preview Javadoc of Buffer" macro (Andreas Mross).

- The file system browser's completion no longer breaks when entering
  paths not in the current directory.

* Version 4.1pre11

Thanks to Kris Kopicki and Stefan Kost for contributing to this release.

+ Enhancements:

- "BeanShell Error" dialog box now shows the full traceback, not just
  the exception message.

- Some minor optimizations.

- FAQ updates (Kris Kopicki).

+ Bug Fixes:

- Minor fix to BibTeX syntax highlighting (Stefan Kost).

- jEditLauncher was not being correctly installed on Windows.

- Fixed accidental AbstractOptionPane API breakage.

- FileVFS._mkdir() did not send the correct VFSUpdates if more than one
  nested directory had to be created.

- Fixed some obscure problems with file system browser dialog box
  completion.

- Narrowing would display the wrong text if the text area was scrolled
  to the start of the buffer.

- jEdit.exit() no longer throws an exception if no views are open. This
  fixes the problem of not being able to exit jEdit when running on
  MacOS X with the -background command line switch (Kris Kopicki).

- Narrowing to one set of lines and then immediately to another such
  that the intersection of the two sets is empty would cause problems.

+ API Additions:

- Added Buffer.invalidateCachedFoldLevels() method needed by SideKick
  plugin.

* Version 4.1pre10

Thanks to Kris Kopicki and Oliver Rutherfurd for contributing to this
release.

+ Enhancements:

- Divider position in Global Options dialog box is now saved.

- Minor improvement to Python auto indent (Oliver Rutherfurd).

- Invocations of 'Delete Line' are now undone one at a time.

- Documentation updates.

- FAQ updates (Kris Kopicki).
